centered file upload items on small screens (fixes #7798)

--- a/src/app/resources/resources-add.scss
+++ b/src/app/resources/resources-add.scss
@@ -22,5 +22,10 @@
     .form-container {
       width: auto;
     }
+
+    .file-upload{
+      display: flex;
+      justify-content: center;
+    }
   }
 }
